minor changes, more logging